--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^10.11.0",
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
